# dito

./: .gitattributes  .gitignore  .pypirc.default  LICENSE.txt  README.md  pyproject.toml  requirements.txt  requirements_build.txt  requirements_extended.txt  setup.py
.github/workflows/: build-and-publish-docs.yml  build_and_upload_docs.yml  docs.yml  tests-full.yml  tests-subset.yml  tests.yml
dito/: __init__.py  aliases.py  analysis.py  conversion.py  core.py  data.py  draw.py  exceptions.py  highgui.py  infos.py  inspect.py  inspection.py  io.py  processing.py  tests.py  utils.py  visual.py
examples/: example_draw.py  example_fig_to_image.py  example_show_napari.py
ezcv2/: __init__.py  access.py  aliases.py  channels.py  data.py  geometry.py  info.py  infos.py  io.py  tests.py  transforms.py  utils.py
qv2/: __init__.py  aliases.py  channels.py  core.py  data.py  geometry.py  infos.py  io.py  tests.py  transforms.py  visual.py
scripts/: bdf_to_lh4rb.py  bdf_to_png.py  build_docs.sh  build_fonts.sh  build_install_dev.sh  build_upload.sh  build_wheel.sh  colorbrewer_import.py  dev_bdf_to_df2.py  dev_build_fonts.sh  dev_ttf_to_df2.py  run_docstr_coverage.sh  run_doctest.sh  run_tests.sh  setenv.sh  test.sh  ttf_to_lh4rb.py
src/dito/: __init__.py  visual.py
